--- a/src/output.css
+++ b/src/output.css
@@ -974,6 +974,14 @@ video {
   gap: 2.5rem;
 }
 
+.gap-8{
+  gap: 2rem;
+}
+
+.gap-9{
+  gap: 2.25rem;
+}
+
 .gap-y-3{
   row-gap: 0.75rem;
 }
@@ -1121,6 +1129,11 @@ video {
 .py-5{
   padding-top: 1.25rem;
   padding-bottom: 1.25rem;
+}
+
+.px-5{
+  padding-left: 1.25rem;
+  padding-right: 1.25rem;
 }
 
 .pl-4{
@@ -1689,6 +1702,14 @@ video {
     gap: 2rem;
   }
 
+  .lg\:gap-24{
+    gap: 6rem;
+  }
+
+  .lg\:gap-14{
+    gap: 3.5rem;
+  }
+
   .lg\:self-end{
     align-self: flex-end;
   }
@@ -1793,6 +1814,18 @@ video {
 
   .lg\:pt-28{
     padding-top: 7rem;
+  }
+
+  .lg\:pr-28{
+    padding-right: 7rem;
+  }
+
+  .lg\:pr-32{
+    padding-right: 8rem;
+  }
+
+  .lg\:pr-36{
+    padding-right: 9rem;
   }
 
   .lg\:text-start{
